--- a/base/configs/superset/assets/charts/CCS_Indicators_16.yaml
+++ b/base/configs/superset/assets/charts/CCS_Indicators_16.yaml
@@ -45,9 +45,10 @@ params:
     optionName: metric_bm4lu228m7_czv4wuqradj
   - expressionType: SQL
     sqlExpression: "CASE \n    WHEN (COUNT(DISTINCT CASE WHEN indicator = '80-percent-women-aged-30-49-years-with-ccs-screening-first-time-via-positive-referred'\
-      \ THEN \"OpenMRS ID\" END) * 100.0 / (COUNT(DISTINCT CASE WHEN indicator = 'women-aged-30-49-years-with-ccs-screening-first-time'\
-      \ THEN \"OpenMRS ID\" END) + COUNT(DISTINCT CASE WHEN indicator = '80-percent-women-aged-30-49-years-with-ccs-screening-first-time-via-positive-referred'\
-      \ THEN \"OpenMRS ID\" END))) >= 80 \n    THEN 'Yes'\n    ELSE 'No'\nEND\n"
+      \ THEN \"OpenMRS ID\" END) * 100.0 / NULLIF(COUNT(DISTINCT CASE WHEN indicator\
+      \ = 'women-aged-30-49-years-with-ccs-screening-first-time' THEN \"OpenMRS ID\"\
+      \ END) + COUNT(DISTINCT CASE WHEN indicator = '80-percent-women-aged-30-49-years-with-ccs-screening-first-time-via-positive-referred'\
+      \ THEN \"OpenMRS ID\" END), 0)) >= 80 \n    THEN 'Yes'\n    ELSE 'No'\nEND\n"
     column: null
     aggregate: null
     datasourceWarning: false
@@ -75,10 +76,10 @@ params:
   metricsLayout: ROWS
   adhoc_filters:
   - clause: WHERE
-    subject: Visit Start date
-    operator: TEMPORAL_RANGE
     comparator: No filter
     expressionType: SIMPLE
+    operator: TEMPORAL_RANGE
+    subject: Visit Start date
   row_limit: 1000
   order_desc: true
   aggregateFunction: Sum
@@ -120,9 +121,10 @@ query_context: "{\"datasource\":{\"id\":4,\"type\":\"table\"},\"force\":false,\"
   \ were referred for cervical precancerous lesion treatment per month)\",\"optionName\"\
   :\"metric_bm4lu228m7_czv4wuqradj\"},{\"expressionType\":\"SQL\",\"sqlExpression\"\
   :\"CASE \\n    WHEN (COUNT(DISTINCT CASE WHEN indicator = '80-percent-women-aged-30-49-years-with-ccs-screening-first-time-via-positive-referred'\
-  \ THEN \\\"OpenMRS ID\\\" END) * 100.0 / (COUNT(DISTINCT CASE WHEN indicator = 'women-aged-30-49-years-with-ccs-screening-first-time'\
-  \ THEN \\\"OpenMRS ID\\\" END) + COUNT(DISTINCT CASE WHEN indicator = '80-percent-women-aged-30-49-years-with-ccs-screening-first-time-via-positive-referred'\
-  \ THEN \\\"OpenMRS ID\\\" END))) >= 80 \\n    THEN 'Yes'\\n    ELSE 'No'\\nEND\\\
+  \ THEN \\\"OpenMRS ID\\\" END) * 100.0 / NULLIF(COUNT(DISTINCT CASE WHEN indicator\
+  \ = 'women-aged-30-49-years-with-ccs-screening-first-time' THEN \\\"OpenMRS ID\\\
+  \" END) + COUNT(DISTINCT CASE WHEN indicator = '80-percent-women-aged-30-49-years-with-ccs-screening-first-time-via-positive-referred'\
+  \ THEN \\\"OpenMRS ID\\\" END), 0)) >= 80 \\n    THEN 'Yes'\\n    ELSE 'No'\\nEND\\\
   n\",\"column\":null,\"aggregate\":null,\"datasourceWarning\":false,\"hasCustomLabel\"\
   :true,\"label\":\"\u1799\u17C9\u17B6\u1784\u17A0\u17C4\u1785\u178E\u17B6\u179F\u17CB\
   \ 80 \u1797\u17B6\u1782\u179A\u1799\u1793\u17C3\u17A2\u17D2\u1793\u1780\u1787\u17C6\
@@ -191,9 +193,10 @@ query_context: "{\"datasource\":{\"id\":4,\"type\":\"table\"},\"force\":false,\"
   \ were referred for cervical precancerous lesion treatment per month)\",\"optionName\"\
   :\"metric_bm4lu228m7_czv4wuqradj\"},{\"expressionType\":\"SQL\",\"sqlExpression\"\
   :\"CASE \\n    WHEN (COUNT(DISTINCT CASE WHEN indicator = '80-percent-women-aged-30-49-years-with-ccs-screening-first-time-via-positive-referred'\
-  \ THEN \\\"OpenMRS ID\\\" END) * 100.0 / (COUNT(DISTINCT CASE WHEN indicator = 'women-aged-30-49-years-with-ccs-screening-first-time'\
-  \ THEN \\\"OpenMRS ID\\\" END) + COUNT(DISTINCT CASE WHEN indicator = '80-percent-women-aged-30-49-years-with-ccs-screening-first-time-via-positive-referred'\
-  \ THEN \\\"OpenMRS ID\\\" END))) >= 80 \\n    THEN 'Yes'\\n    ELSE 'No'\\nEND\\\
+  \ THEN \\\"OpenMRS ID\\\" END) * 100.0 / NULLIF(COUNT(DISTINCT CASE WHEN indicator\
+  \ = 'women-aged-30-49-years-with-ccs-screening-first-time' THEN \\\"OpenMRS ID\\\
+  \" END) + COUNT(DISTINCT CASE WHEN indicator = '80-percent-women-aged-30-49-years-with-ccs-screening-first-time-via-positive-referred'\
+  \ THEN \\\"OpenMRS ID\\\" END), 0)) >= 80 \\n    THEN 'Yes'\\n    ELSE 'No'\\nEND\\\
   n\",\"column\":null,\"aggregate\":null,\"datasourceWarning\":false,\"hasCustomLabel\"\
   :true,\"label\":\"\u1799\u17C9\u17B6\u1784\u17A0\u17C4\u1785\u178E\u17B6\u179F\u17CB\
   \ 80 \u1797\u17B6\u1782\u179A\u1799\u1793\u17C3\u17A2\u17D2\u1793\u1780\u1787\u17C6\
@@ -213,10 +216,10 @@ query_context: "{\"datasource\":{\"id\":4,\"type\":\"table\"},\"force\":false,\"
   \ of patients with confirmed diagnosis as VIA+ were referred for treatment at the\
   \ RHs. One year after of treatment, the patients will be rescreened again as recommended\
   \ by SOP.)\",\"optionName\":\"metric_2cxj9ntl3yi_kdmjmpegqto\"}],\"metricsLayout\"\
-  :\"ROWS\",\"adhoc_filters\":[{\"clause\":\"WHERE\",\"subject\":\"Visit Start date\"\
-  ,\"operator\":\"TEMPORAL_RANGE\",\"comparator\":\"No filter\",\"expressionType\"\
-  :\"SIMPLE\"}],\"row_limit\":1000,\"order_desc\":true,\"aggregateFunction\":\"Sum\"\
-  ,\"rowTotals\":false,\"colTotals\":false,\"transposePivot\":true,\"combineMetric\"\
+  :\"ROWS\",\"adhoc_filters\":[{\"clause\":\"WHERE\",\"comparator\":\"No filter\"\
+  ,\"expressionType\":\"SIMPLE\",\"operator\":\"TEMPORAL_RANGE\",\"subject\":\"Visit\
+  \ Start date\"}],\"row_limit\":1000,\"order_desc\":true,\"aggregateFunction\":\"\
+  Sum\",\"rowTotals\":false,\"colTotals\":false,\"transposePivot\":true,\"combineMetric\"\
   :false,\"valueFormat\":\"~g\",\"date_format\":\"smart_date\",\"rowOrder\":\"key_a_to_z\"\
   ,\"colOrder\":\"key_a_to_z\",\"conditional_formatting\":[],\"extra_form_data\":{},\"\
   dashboards\":[1],\"force\":false,\"result_format\":\"json\",\"result_type\":\"full\"\
