--- a/base/configs/superset/assets/charts/Registered_women_aged_30_to_49_years_that_have_had_their_CCS_screening_for_the_first_time_and_were_VIA_positive_and_referred_5.yaml
+++ b/base/configs/superset/assets/charts/Registered_women_aged_30_to_49_years_that_have_had_their_CCS_screening_for_the_first_time_and_were_VIA_positive_and_referred_5.yaml
@@ -5,14 +5,17 @@ certified_by: null
 certification_details: null
 viz_type: table
 params:
-  datasource: 35__table
+  datasource: 4__table
   viz_type: table
-  slice_id: 155
-  granularity_sqla: Visit Start date
-  time_grain_sqla: P1D
-  time_range: No filter
+  slice_id: 5
   query_mode: raw
   groupby: []
+  time_grain_sqla: P1D
+  temporal_columns_lookup:
+    Encounter date and time: true
+    Visit End date: true
+    Visit Start date: true
+    Patient's Birthdate: true
   metrics: []
   all_columns:
   - Facility Name
@@ -42,20 +45,24 @@ params:
   - CC Reason for Referral
   - CC Treatment
   - CC Follow-up date
-  - Encounter date and time
   percent_metrics: []
   adhoc_filters:
-  - expressionType: SIMPLE
-    subject: indicator
-    operator: ==
-    operatorId: EQUALS
+  - clause: WHERE
     comparator: 80-percent-women-aged-30-49-years-with-ccs-screening-first-time-via-positive-referred
-    clause: WHERE
-    sqlExpression: null
+    datasourceWarning: false
+    expressionType: SIMPLE
+    filterOptionName: filter_5stpm8h7cda_f2e3lyfu96d
     isExtra: false
     isNew: false
-    datasourceWarning: false
-    filterOptionName: filter_5stpm8h7cda_f2e3lyfu96d
+    operator: ==
+    operatorId: EQUALS
+    sqlExpression: null
+    subject: indicator
+  - clause: WHERE
+    subject: Visit Start date
+    operator: TEMPORAL_RANGE
+    comparator: No filter
+    expressionType: SIMPLE
   order_by_cols: []
   row_limit: 1000
   server_page_length: 10
@@ -65,23 +72,23 @@ params:
   color_pn: true
   extra_form_data: {}
   dashboards:
-  - 20
-  annotation_layers: []
-query_context: '{"datasource":{"id":35,"type":"table"},"force":false,"queries":[{"time_range":"No
-  filter","granularity":"Visit Start date","filters":[{"col":"indicator","op":"==","val":"80-percent-women-aged-30-49-years-with-ccs-screening-first-time-via-positive-referred"}],"extras":{"time_grain_sqla":"P1D","having":"","where":""},"applied_time_extras":{},"columns":["Facility
+  - 1
+query_context: '{"datasource":{"id":4,"type":"table"},"force":false,"queries":[{"filters":[{"col":"indicator","op":"==","val":"80-percent-women-aged-30-49-years-with-ccs-screening-first-time-via-positive-referred"},{"col":"Visit
+  Start date","op":"TEMPORAL_RANGE","val":"No filter"}],"extras":{"time_grain_sqla":"P1D","having":"","where":""},"applied_time_extras":{},"columns":["Facility
   Name","Facility District","Facility Province","OpenMRS ID","Patient''s First name","Patient''s
   Last name","Patient Address","Phone number","Other Identifiers","Visit Start date","Visit
   End date","Visit Type","Referral source","Insurance type","First Screening?","HPV
   Test","Visibility of SCJ","VIA Test Result","Number of Quadrants","Area of ectocervix","Colposcopy","Cervical
   Biopsy","Pap Smear","Referral Facility","CC Reason for Referral","CC Treatment","CC
-  Follow-up date","Encounter date and time"],"orderby":[],"annotation_layers":[],"row_limit":1000,"series_limit":0,"order_desc":true,"url_params":{},"custom_params":{},"custom_form_data":{},"post_processing":[]}],"form_data":{"datasource":"35__table","viz_type":"table","slice_id":155,"granularity_sqla":"Visit
-  Start date","time_grain_sqla":"P1D","time_range":"No filter","query_mode":"raw","groupby":[],"metrics":[],"all_columns":["Facility
+  Follow-up date"],"orderby":[],"annotation_layers":[],"row_limit":1000,"series_limit":0,"order_desc":true,"url_params":{},"custom_params":{},"custom_form_data":{},"post_processing":[]}],"form_data":{"datasource":"4__table","viz_type":"table","slice_id":5,"query_mode":"raw","groupby":[],"time_grain_sqla":"P1D","temporal_columns_lookup":{"Encounter
+  date and time":true,"Visit End date":true,"Visit Start date":true,"Patient''s Birthdate":true},"metrics":[],"all_columns":["Facility
   Name","Facility District","Facility Province","OpenMRS ID","Patient''s First name","Patient''s
   Last name","Patient Address","Phone number","Other Identifiers","Visit Start date","Visit
   End date","Visit Type","Referral source","Insurance type","First Screening?","HPV
   Test","Visibility of SCJ","VIA Test Result","Number of Quadrants","Area of ectocervix","Colposcopy","Cervical
   Biopsy","Pap Smear","Referral Facility","CC Reason for Referral","CC Treatment","CC
-  Follow-up date","Encounter date and time"],"percent_metrics":[],"adhoc_filters":[{"expressionType":"SIMPLE","subject":"indicator","operator":"==","operatorId":"EQUALS","comparator":"80-percent-women-aged-30-49-years-with-ccs-screening-first-time-via-positive-referred","clause":"WHERE","sqlExpression":null,"isExtra":false,"isNew":false,"datasourceWarning":false,"filterOptionName":"filter_5stpm8h7cda_f2e3lyfu96d"}],"order_by_cols":[],"row_limit":1000,"server_page_length":10,"include_time":false,"order_desc":true,"table_timestamp_format":"smart_date","show_cell_bars":true,"color_pn":true,"extra_form_data":{},"dashboards":[20],"force":false,"result_format":"json","result_type":"full"},"result_format":"json","result_type":"full"}'
+  Follow-up date"],"percent_metrics":[],"adhoc_filters":[{"clause":"WHERE","comparator":"80-percent-women-aged-30-49-years-with-ccs-screening-first-time-via-positive-referred","datasourceWarning":false,"expressionType":"SIMPLE","filterOptionName":"filter_5stpm8h7cda_f2e3lyfu96d","isExtra":false,"isNew":false,"operator":"==","operatorId":"EQUALS","sqlExpression":null,"subject":"indicator"},{"clause":"WHERE","subject":"Visit
+  Start date","operator":"TEMPORAL_RANGE","comparator":"No filter","expressionType":"SIMPLE"}],"order_by_cols":[],"row_limit":1000,"server_page_length":10,"order_desc":true,"table_timestamp_format":"smart_date","show_cell_bars":true,"color_pn":true,"extra_form_data":{},"dashboards":[1],"force":false,"result_format":"json","result_type":"full","include_time":false},"result_format":"json","result_type":"full"}'
 cache_timeout: null
 uuid: a770204a-9220-4c7e-8ea0-4773b2bf8a62
 version: 1.0.0
