--- a/base/configs/superset/assets/datasets/Analytics/Patients_Screened_For_NCD_For_The_First_Time_Query-dataset.yaml
+++ b/base/configs/superset/assets/datasets/Analytics/Patients_Screened_For_NCD_For_The_First_Time_Query-dataset.yaml
@@ -167,15 +167,10 @@ metrics:
   warning_text: null
 columns:
 - column_name: Other Identifiers
-  verbose_name: "\u1794\u17D2\u179A\u1797\u17C1\u1791\u179B\u17C1\u1781\u179F\u1798\
-    \u17D2\u1782\u17B6\u179B\u17CB\u1795\u17D2\u179F\u17C1\u1784\u1791\u17C0\u178F\
-    \ (\u1788\u17D2\u1798\u17C4\u17C7\u178A\u17C4\u1799\u17A1\u17C2\u1780\u1796\u17B8\
-    \u1782\u17D2\u1793\u17B6\u178A\u17C4\u1799\u179F\u1789\u17D2\u1789\u17B6\u1780\
-    \u17D2\u1794\u17C0\u179F) (Other ID types (comma separated names)) : \u179B\u17C1\
-    \u1781\u179F\u1798\u17D2\u1782\u17B6\u179B\u17CB\u1795\u17D2\u179F\u17C1\u1784\
-    \u1791\u17C0\u178F (\u179B\u17C1\u1781\u1794\u17C6\u1794\u17C2\u1780\u178A\u17C4\
-    \u1799\u179F\u1789\u17D2\u1789\u17B6\u1780\u17D2\u1794\u17C0\u179F) (Other ID\
-    \ Values (comma separated values))"
+  verbose_name: "\u179B\u17C1\u1781\u179F\u1798\u17D2\u1782\u17B6\u179B\u17CB\u1795\
+    \u17D2\u179F\u17C1\u1784\u1791\u17C0\u178F (\u179B\u17C1\u1781\u1794\u17C6\u1794\
+    \u17C2\u1780\u178A\u17C4\u1799\u179F\u1789\u17D2\u1789\u17B6\u1780\u17D2\u1794\
+    \u17C0\u179F) (Other ID Values (comma separated values))"
   is_dttm: false
   is_active: true
   type: STRING
