--- a/base/configs/superset/assets/datasets/Analytics/Women_Screened_For_Cervical_Cancer_For_The_First_Time_Query-dataset.yaml
+++ b/base/configs/superset/assets/datasets/Analytics/Women_Screened_For_Cervical_Cancer_For_The_First_Time_Query-dataset.yaml
@@ -123,16 +123,9 @@ metrics:
     warning_markdown: ''
   warning_text: null
 columns:
-- column_name: Other Identifiers
-  verbose_name: "\u1794\u17D2\u179A\u1797\u17C1\u1791\u179B\u17C1\u1781\u179F\u1798\
-    \u17D2\u1782\u17B6\u179B\u17CB\u1795\u17D2\u179F\u17C1\u1784\u1791\u17C0\u178F\
-    \ (\u1788\u17D2\u1798\u17C4\u17C7\u178A\u17C4\u1799\u17A1\u17C2\u1780\u1796\u17B8\
-    \u1782\u17D2\u1793\u17B6\u178A\u17C4\u1799\u179F\u1789\u17D2\u1789\u17B6\u1780\
-    \u17D2\u1794\u17C0\u179F) (Other ID types (comma separated names)) : \u179B\u17C1\
-    \u1781\u179F\u1798\u17D2\u1782\u17B6\u179B\u17CB\u1795\u17D2\u179F\u17C1\u1784\
-    \u1791\u17C0\u178F (\u179B\u17C1\u1781\u1794\u17C6\u1794\u17C2\u1780\u178A\u17C4\
-    \u1799\u179F\u1789\u17D2\u1789\u17B6\u1780\u17D2\u1794\u17C0\u179F) (Other ID\
-    \ Values (comma separated values))"
+- column_name: VIA Test Result
+  verbose_name: "\u179B\u1791\u17D2\u1792\u1795\u179B \u178F\u17C1\u179F\u17D2\u178F\
+    \ \u179C\u17B8 \u17A2\u17B6\u1799 \u17A2\u17C1 (VIA Test Result)"
   is_dttm: false
   is_active: true
   type: STRING
@@ -144,9 +137,11 @@ columns:
   python_date_format: null
   extra:
     warning_markdown: null
-- column_name: VIA Test Result
-  verbose_name: "\u179B\u1791\u17D2\u1792\u1795\u179B \u178F\u17C1\u179F\u17D2\u178F\
-    \ \u179C\u17B8 \u17A2\u17B6\u1799 \u17A2\u17C1 (VIA Test Result)"
+- column_name: Other Identifiers
+  verbose_name: "\u179B\u17C1\u1781\u179F\u1798\u17D2\u1782\u17B6\u179B\u17CB\u1795\
+    \u17D2\u179F\u17C1\u1784\u1791\u17C0\u178F (\u179B\u17C1\u1781\u1794\u17C6\u1794\
+    \u17C2\u1780\u178A\u17C4\u1799\u179F\u1789\u17D2\u1789\u17B6\u1780\u17D2\u1794\
+    \u17C0\u179F) (Other ID Values (comma separated values))"
   is_dttm: false
   is_active: true
   type: STRING
